Fix Overlapping && WhyBlaze Component

--- a/src/Components/Stylesheet/Home.css
+++ b/src/Components/Stylesheet/Home.css
@@ -1,5 +1,5 @@
 .master {
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(rgba(130, 212, 233, 0.7), #ffffff);
 }
 .child-1 {
